RF-12702: fixed Info icon's border-radius to work on Safari 5

--- a/kitchensink/src/main/resources/archetype-resources/src/main/webapp/resources/css/mobile.css
+++ b/kitchensink/src/main/resources/archetype-resources/src/main/webapp/resources/css/mobile.css
@@ -13,7 +13,7 @@ header .info-link {
 
 .info-link a {
    background-color: white;
-   border-radius: 50%;
+   border-radius: 1em;
    padding: 5px 10px;
 }
 
